@@ -4,8 +4,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_14
+    targetCompatibility = JavaVersion.VERSION_14
 }
 
 repositories {
@@ -16,10 +16,6 @@ task integrationTest(type: Test)
 task e2eTest(type: Test)
 
 tasks {
-    wrapper {
-        gradleVersion = "6.0.1"
-    }
-
     test {
         useJUnitPlatform {
             excludeTags("integration")
@@ -49,16 +45,25 @@ tasks {
     check.dependsOn(e2eTest)
 }
 
-configurations.all {
-    resolutionStrategy {
-        failOnVersionConflict()
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
+configurations {
+    all {
+        resolutionStrategy {
+            failOnVersionConflict()
+        }
     }
 }
 
 dependencies {
-    annotationProcessor("org.projectlombok:lombok:1.18.10")
-    compileOnly("org.projectlombok:lombok:1.18.10")
-
     implementation("com.sparkjava:spark-core:2.9.1") {
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-server")
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-servlet")
@@ -66,41 +71,38 @@ dependencies {
     }
 
     implementation("org.msgpack:msgpack-core:0.8.20")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.10.1")
 
-    implementation("org.flywaydb:flyway-core:6.1.3")
+    implementation("org.flywaydb:flyway-core:6.3.2")
 
     implementation("ch.qos.logback:logback-classic:1.2.3")
-    implementation("io.micrometer:micrometer-registry-prometheus:1.3.2")
-    implementation("io.zipkin.brave:brave-instrumentation-sparkjava:5.9.1")
-    implementation("io.zipkin.brave:brave-instrumentation-p6spy:5.9.1")
-    implementation("io.zipkin.reporter2:zipkin-sender-urlconnection:2.11.1")
+    implementation("io.micrometer:micrometer-registry-prometheus:1.4.0")
+    implementation("io.zipkin.brave:brave-instrumentation-sparkjava:5.10.2")
+    implementation("io.zipkin.brave:brave-instrumentation-p6spy:5.10.2")
+    implementation("io.zipkin.reporter2:zipkin-sender-urlconnection:2.12.1")
 
     implementation("com.h2database:h2:1.4.200")
-    implementation("mysql:mysql-connector-java:8.0.18") {
+    implementation("mysql:mysql-connector-java:8.0.19") {
         exclude(group: "com.google.protobuf", module: "protobuf-java")
     }
     implementation("org.postgresql:postgresql:42.2.9")
-    implementation("com.zaxxer:HikariCP:3.4.1")
+    implementation("com.zaxxer:HikariCP:3.4.2")
 
-    testAnnotationProcessor("org.projectlombok:lombok:1.18.10")
-    testCompileOnly("org.projectlombok:lombok:1.18.10")
-    testImplementation("org.assertj:assertj-core:3.14.0")
-    testImplementation("io.rest-assured:rest-assured:4.1.2")
-    testImplementation("org.reflections:reflections:0.9.11")
+    testImplementation("org.assertj:assertj-core:3.15.0")
+    testImplementation("io.rest-assured:rest-assured:4.3.0")
+    testImplementation("org.reflections:reflections:0.9.12")
 
-    testImplementation("org.testcontainers:mysql:1.12.4") {
+    testImplementation("org.testcontainers:mysql:1.13.0") {
         exclude(group: "org.slf4j", module: "slf4j-api")
     }
-    testImplementation("org.testcontainers:postgresql:1.12.4") {
+    testImplementation("org.testcontainers:postgresql:1.13.0") {
         exclude(group: "org.slf4j", module: "slf4j-api")
     }
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.1")
 
-    testImplementation("com.tngtech.archunit:archunit-junit5-api:0.12.0")
-    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine:0.12.0") {
+    testImplementation("com.tngtech.archunit:archunit-junit5-api:0.13.1")
+    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine:0.13.1") {
         exclude(group: "org.junit.platform", module: "junit-platform-engine")
     }
 }
